--- a/src/index.html
+++ b/src/index.html
@@ -1,63 +1,302 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Page</title>
-    <link rel="stylesheet" href="../dist/css/bundle.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Playfair+Display:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header class="header">
-      <section class="section">
-        <div class="logo">
-          <h1>LOGO</h1>
-        </div>
-        <nav class="navigation">
-          <ul class="list">
-            <li class="list-item">
-              <a href="#">MENU</a>
-            </li>
-            <li class="list-item">
-              <a href="#">MENU</a>
-            </li>
-            <li class="list-item">
-              <a href="#">MENU</a>
-            </li>
-            <li class="list-item">
-              <a href="#">MENU</a>
-            </li>
-            <li class="list-item">
-              <a href="#">MENU</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="icons">
-          <div class="icon-container">
-            <img src="../dist/assets/search-solid.svg" alt="Search icon" class="search-icon">
-          </div>
-          <div class="icon-container">
-            <img src="../dist/assets/user-circle-regular.svg" alt="User icon" class="user-icon">
-          </div>
-          <div class="icon-container">
-            <img src="../dist/assets/3669232_basket_shopping_ic_icon.svg" alt="Shopping basket icon" class="basket-icon">
-          </div>
-        </div>
-      </section>
-    </header>
-    <main class="main">
-      <div class="hero"></div>
-      <div>
-        
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Web Page</title>
+  <link
+  rel="stylesheet"
+  href="https://unpkg.com/swiper/swiper-bundle.min.css"
+  />
+  <link rel="stylesheet" href="../dist/css/bundle.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+  href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Playfair+Display:wght@400;700&display=swap"
+  rel="stylesheet"
+  />
+</head>
+<body>
+  <header class="header">
+    <section class="section">
+      <div class="logo">
+        <h1>LOGO</h1>
       </div>
-    </main>
-    <footer></footer>
-    <script src="../dist/js/index.js"></script>
-  </body>
+      <nav class="navigation">
+        <ul class="list">
+          <li class="list-item">
+            <a href="#">MENU</a>
+          </li>
+          <li class="list-item">
+            <a href="#">MENU</a>
+          </li>
+          <li class="list-item">
+            <a href="#">MENU</a>
+          </li>
+          <li class="list-item">
+            <a href="#">MENU</a>
+          </li>
+          <li class="list-item">
+            <a href="#">MENU</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="icons">
+        <div class="icon-container">
+          <img
+          src="../dist/assets/search_icon.svg"
+          alt="Search icon"
+          class="search-icon"
+          />
+        </div>
+        <div class="icon-container">
+          <img
+          src="../dist/assets/user_icon.svg"
+          alt="User icon"
+          class="user-icon"
+          />
+        </div>
+        <div class="icon-container">
+          <img
+          src="../dist/assets/basket_shopping_icon.svg"
+          alt="Shopping basket icon"
+          class="basket-icon"
+          />
+        </div>
+      </div>
+    </section>
+  </header>
+  <main class="main">
+    <div class="banner"></div>
+    <div>
+      <div class="swiper icons-swiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="swiper-slide-item">
+              <img
+              src="https://picsum.photos/id/0/150/150"
+              alt="Random image"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="swiper-slide-item">
+              <img
+              src="https://picsum.photos/id/1/150/150"
+              alt="Random image"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="swiper-slide-item">
+              <img
+              src="https://picsum.photos/id/2/150/150"
+              alt="Random image"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="swiper-slide-item">
+              <img
+              src="https://picsum.photos/id/3/150/150"
+              alt="Random image"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="swiper-slide-item">
+              <img
+              src="https://picsum.photos/id/4/150/150"
+              alt="Random image"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="swiper-slide-item">
+              <img
+              src="https://picsum.photos/id/5/150/150"
+              alt="Random image"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="swiper-slide-item">
+              <img
+              src="https://picsum.photos/id/6/150/150"
+              alt="Random image"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="swiper-slide-item">
+              <img
+              src="https://picsum.photos/id/7/150/150"
+              alt="Random image"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="swiper-slide-item">
+              <img
+              src="https://picsum.photos/id/8/150/150"
+              alt="Random image"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="swiper-slide-item">
+              <img
+              src="https://picsum.photos/id/9/150/150"
+              alt="Random image"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="swiper-slide-item">
+              <img
+              src="https://picsum.photos/id/10/150/150"
+              alt="Random image"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="swiper-slide-item">
+              <img
+              src="https://picsum.photos/id/11/150/150"
+              alt="Random image"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </div>
+    <section class="infos-section">
+      <div class="background">
+        <a href="#"
+        ><img
+        src="../dist/assets/arrow_down_icon.svg"
+        alt="Arrow pointing down"
+        class="down-arrow"
+        /></a>
+      </div>
+      <div class="description-texts">
+        <span>Lorem ipsum lorem dolor</span>
+        <h2 class="description-title">Lorem ipsum dolor sit amet</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus
+          vulputate eu scelerisque felis imperdiet proin fermentum. Praesent
+          semper feugiat nibh sed pulvinar proin gravida.
+        </p>
+      </div>
+      <div class="description-cards">
+        <div class="single-card">
+          <img
+          src="https://picsum.photos/400/480"
+          alt="Random image"
+          class="card-img"
+          />
+          <div class="card-text">
+            <h3 class="card-title">Título do banner</h3>
+            <p class="card-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempo.
+            </p>
+          </div>
+        </div>
+        <div class="double-cards">
+          <img
+          src="https://picsum.photos/400/224"
+          alt="Random image"
+          class="card-img-small"
+          />
+          <div class="card-text">
+            <h3 class="card-title">Título do banner</h3>
+            <p class="card-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempo.
+            </p>
+          </div>
+          <img
+          src="https://picsum.photos/400/480"
+          alt="Random image"
+          class="card-img"
+          />
+          <div class="card-text">
+            <h3 class="card-title">Título do banner</h3>
+            <p class="card-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempo.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="showcase-section">
+      <div class="background"></div>
+      <div class="showcase">
+        <div class="showcase-imgs">
+          <img
+          src="https://picsum.photos/350/480"
+          alt="Random img"
+          class="showcase-img showcase-img0"
+          />
+          <img
+          src="https://picsum.photos/350/480"
+          alt="Random img"
+          class="showcase-img showcase-img1"
+          />
+          <img
+          src="https://picsum.photos/350/480"
+          alt="Random img"
+          class="showcase-img showcase-img2"
+          />
+        </div>
+        <div class="showcase-infos">
+          <div class="showcase-info showcase-info0">
+            <span>Lorem ipsum lorem dolor</span>
+            <h2 class="showcase-title">Lorem ipsum dolor sit amet</h2>
+            <p class="showcase-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus
+              vulputate eu scelerisque felis imperdiet proin fermentum. Praesent
+              semper feugiat nibh sed pulvinar proin gravida.
+            </p>
+            <button class="cta">Call-to-action ></button>
+          </div>
+          <div class="showcase-info showcase-info1">
+            <span>Lorem ipsum lorem dolor</span>
+            <h2 class="showcase-title">Lorem ipsum dolor sit amet</h2>
+            <p class="showcase-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus
+              vulputate eu scelerisque felis imperdiet proin fermentum. Praesent
+              semper feugiat nibh sed pulvinar proin gravida.
+            </p>
+            <button class="cta">Call-to-action ></button>
+          </div>
+          <div class="showcase-info showcase-info2">
+            <span>Lorem ipsum lorem dolor</span>
+            <h2 class="showcase-title">Lorem ipsum dolor sit amet</h2>
+            <p class="showcase-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus
+              vulputate eu scelerisque felis imperdiet proin fermentum. Praesent
+              semper feugiat nibh sed pulvinar proin gravida.
+            </p>
+            <button class="cta">Call-to-action ></button>
+          </div>
+        </div>
+      </div>
+      <div class="swiper showcase-swiper"></div>
+    </section>
+  </main>
+  <footer></footer>
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script src="../dist/js/index.js"></script>
+</body>
 </html>
