mobile version done

--- a/src/index.html
+++ b/src/index.html
@@ -377,8 +377,10 @@
         <div class="menu subscription-menu">
           <span class="menu-text">MENU</span>
           <div class="subscription">
-            <input type="email" placeholder="Email" class="email-input" />
-            <button class="send-button">ENVIAR ></button>
+            <div class="subscription-field">
+              <input type="email" placeholder="Email" class="email-input" />
+              <button class="send-button">ENVIAR ></button>
+            </div>
             <div class="underline"></div>
           </div>
         </div>
@@ -405,6 +407,9 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="legal">
+        <span>@Vnda - Tecnologia para ecommerce - CNPJ 00.0000.000/0001-00</span>
       </div>
     </footer>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
